Tests/a2/accept/1.ul
void main(){
	int x;
}

void a(){
	int x;
}