Tests/a2/reject/5.ul
void main(){
	int[3] x;
	int[5] y;
	x=y;
}